fix: adjust the overflow content

--- a/src/components/Admin/AdminContainer.module.scss
+++ b/src/components/Admin/AdminContainer.module.scss
@@ -5,5 +5,5 @@
   width: 100%;
   margin: 0 auto;
   flex-wrap: nowrap;
-  overflow-y: hidden;
+  overflow: hidden;
 }
