--- a/src/components/Admin/AdminRightContainer.module.scss
+++ b/src/components/Admin/AdminRightContainer.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   border-left: 1px solid var(--border);
+  overflow: hidden;
 }
 
 .titleSecion {
@@ -28,12 +29,12 @@
   color: var(--grayscale-dark-100);
 }
 
-.cartContainer {
+.contentContainer {
   height: 100%;
   max-width: 930px;
   padding: 16px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   row-gap: 16px;
   overflow-y: scroll;
 }
